[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/player/white_character_walk_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/white_character_blink_2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/white_character_idle_1.png" type="Texture" id=4]
[ext_resource path="res://assets/player/white_character_idle_2.png" type="Texture" id=5]
[ext_resource path="res://assets/player/white_character_idle_3.png" type="Texture" id=6]
[ext_resource path="res://assets/player/white_character_walk_2.png" type="Texture" id=7]
[ext_resource path="res://assets/player/white_character_blink_1.png" type="Texture" id=8]
[ext_resource path="res://assets/player/white_character_crouch_3.png" type="Texture" id=9]
[ext_resource path="res://assets/player/white_character_crouch_1.png" type="Texture" id=10]
[ext_resource path="res://assets/player/white_character_crouch_2.png" type="Texture" id=11]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec4 baseColor : hint_color;

void fragment() {
	vec4 textureColor = texture(TEXTURE, UV);
	COLOR.rgba = vec4(baseColor.r, baseColor.g, baseColor.b, textureColor.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/baseColor = Color( 0.964706, 0.447059, 0.501961, 1 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.252595, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": false,
"name": "crouch",
"speed": 45.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 8 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.0
height = 10.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 2 )
dashHazardMask = 262144

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="TrailParticles" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource( 7 )
position = Vector2( 0, -12 )
amount = 15
lifetime = 0.4
local_coords = false
texture = ExtResource( 8 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 8 )

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 0, -11 )
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 327680

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
visible = false
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="DashArea" type="Area2D" parent="."]
position = Vector2( 0, -10 )
scale = Vector2( 0.94863, 0.94863 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
rotation = -1.5708
shape = SubResource( 5 )
disabled = true
